--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/**/*", "use": "@vercel/node" }]
+  "builds": [{ "src": "api/**/*.js", "use": "@vercel/node" }],
+  "routes": [
+    { "src": "/api/todos/([^/]+)", "dest": "/api/todos/[id].js" },
+    { "src": "/api/todos", "dest": "/api/todos/index.js" }
+  ]
 }
