--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [{ "src": "api/**/*.js", "use": "@vercel/node" }],
   "routes": [
-    { "src": "/api/todos/([^/]+)", "dest": "/api/todos/[id].js" },
+    { "src": "/api/todos/([^/]+)", "dest": "/api/todos/[id].js?id=$1" },
     { "src": "/api/todos", "dest": "/api/todos/index.js" }
   ]
 }
